testimonials section fix color contrast

--- a/style/_testimonials.scss
+++ b/style/_testimonials.scss
@@ -8,7 +8,8 @@
 
     h2 {
         font-family: Fraunces, sans-serif;
-        color: $grayish-blue;
+        // color: $grayish-blue;
+        color: #56595D;
         font-size: 1.25rem;
     }
 
@@ -46,7 +47,7 @@
 
             small {
                 font-family: Barlow, sans-serif;
-                color: $grayish-blue;
+                color: #56595D;
             }
         }
     }
